--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <DOCTYPE html>
-<!--just an edit to save in notepad, it is a numbers game now?-->
+<!--just an edit to save in notepad, it will be a numbers game-->
 <html>
 
   <!-- HEAD SECTION STARTS -->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.5, maximum-scale=0.5, minimal-ui">
-    <title>MASH Game</title>
+    <title>CASH Game</title>
     <link href="normalize.css" rel="stylesheet">
-    <link href="sytle.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <!-- HEAD SECTION ENDS -->
 
   <!-- BODY SECTION STARTS -->
   <body>
     <h1>CASH Game</h1>
-    <h2>Cash, Autos, Stocks, Homes</h2>
+    <h2>Cash, Auto, Stock, Home</h2>
         <p class="description">Your responses help predict your future wealth.</p>
-    <form action="" method="post" id="mash">
+    <form action="" method="post" id="cash">
       <div id="answers" class="hide">
         <p>In the future, I predict you will have 
-          <span id="answer_3"
+          <span id="answer_3">
           </span>K cash, 
 
 <!--      <span id="answer_4"
