--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <button type="submit" class="button-submit">Mix my desires</button>
     </form>  
-    <script src=""></script>
+    <script src="script.js"></script>
   </body>
   <!-- BODY SECTION ENDS -->
   <!-- Kim's efforts in her 2023 NVC 1316 Course by R. Macias-->
