trying to show result
result not showing, changed color from #fff to goldenrod

--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
         <p class="description">Your responses help predict your future wealth.</p>
     <form action="" method="post" id="cash">
       <div id="answers" class="hide">
-        <p>In the future, I predict you will have 
-          <span id="answer_3">
-          </span>K cash, 
-
+        <p>In the future, I predict you will have <span id="answer_3">
+          </span> K cash, 
 <!--      <span id="answer_4"
           </span>K stocks, 
--->       
-          <span id="answer_1">
+-->       <span id="answer_1">
           </span> autos, and
           <span id="answer_2">  
           </span> own 
