changed cash back to mash
    <form action="" method="post" id="mash">

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>CASH Game</h1>
     <h2>Cash, Auto, Stock, Home</h2>
         <p class="description">Your responses help predict your future wealth.</p>
-    <form action="" method="post" id="cash">
+    <form action="" method="post" id="mash">
       <div id="answers" class="hide">
         <p>In the future, I predict you will have <span id="answer_3">
           </span> K cash, 
