--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <!--      <span id="answer_4"
           </span>K stocks, 
 -->       <span id="answer_1">
-          </span> autos, and
+          </span> autos, and own
           <span id="answer_2">  
-          </span> own 
+          </span>  
           <span id="home"></span> properties.
       </div>
  
