--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <label for="formAnswer3">Enter how many 1000s in cash you want </label><input name="answer_3[]" id="formAnswer3">
         </div>
       </div>
-      <button type="submit" class="button-submit">Mix my desires</button>
+      <button type="submit" class="button-submit" color="darkmagenta">Mix my desires</button>
     </form>  
     <script src="script.js"></script>
   </body>
